[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lib-inspector"
version = "0.1.0"
description = "A CLI tool to inspect Python libraries and generate Markdown documentation."
license = "MIT" 
authors = [{name = "Joe Hoye Dow", email = "luxunisgod123@gmail.com"}] 
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha", 
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer",
    "networkx",  
]

[project.urls]
Repository = "https://github.com/MaybeBio/LibInspector"

[project.scripts]
# 这里定义了命令行工具的名称 'lib-inspector' 指向 src.cli 模块中的 main 函数
lib-inspector = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]  # 告诉 setuptools 源代码在当前目录（包含 src）